Fix jumping layout when PDF is rerendering

--- a/src/components/PDFFiller.module.css
+++ b/src/components/PDFFiller.module.css
@@ -1,10 +1,13 @@
 .page {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: stretch;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   background-color: #eee;
+}
+
+.pageRow {
+  flex: 1 1 auto;
 }
 
 .formContainer {
@@ -14,6 +17,8 @@
   box-shadow: 0px 2px 30px -20px rgba(0, 0, 0, 0.3);
   font-size: 16px;
   line-height: 1.4em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .form {
@@ -34,6 +39,7 @@
   align-items: center;
   justify-content: center;
   margin: 2em 0;
+  overflow: auto;
 }
 
 .downloadButton {
